--- a/public/css/icomoon.css
+++ b/public/css/icomoon.css
@@ -14,11 +14,10 @@
   font-family: 'icomoon' !important;
   speak: none;
   font-style: normal;
-  font-size: large;
+  font-size: x-large;
   font-weight: normal;
   font-variant: normal;
   text-transform: none;
-  line-height: 1;
 
   /* Better Font Rendering =========== */
   -webkit-font-smoothing: antialiased;
